# skillissue

./: .colosseum-apikey  .gitignore  Anchor.toml  BUILD_PLAN.md  CLAUDE.md  LAUNCH.md  PRD.md  README.md  SECURITY.md  prd.json  progress.txt
app/: .env.example  .env.local.example  package-lock.json  package.json
app/src/components/: ConnectButton.tsx  JobCard.tsx  JobForm.tsx  Layout.tsx  Navigation.tsx  PrivyProvider.tsx  StatusBadge.tsx  WalletProvider.tsx
app/src/hooks/: useJobs.ts  useProfile.ts  useUSDCBalance.ts  useWallet.ts
app/src/pages/: _app.tsx  index.tsx
app/src/pages/jobs/: [id].tsx  index.tsx  new.tsx
app/src/pages/profile/: [address].tsx
app/src/styles/: globals.css
app/src/utils/: skill_issue.ts
backend/: .env  .env.example  .env.oracle.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260207100553_init/: migration.sql
backend/src/: index.ts
backend/src/routes/: agents.ts  disputes.ts  jobs.ts  users.ts  verification.ts  wallet.ts
backend/src/services/: escrow.ts  squads.ts  verification.ts
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
scripts/: deploy-program.sh  launch.sh
scripts/ralph/: CLAUDE.md  progress.txt
sdk/: package.json
sdk/demos/: README.md  agent-onboarding-demo.ts  package.json
sdk/src/: index.ts
