[package]
name = "skill-issue-escrow"
version = "0.1.0"
description = "Minimal escrow program for SkillIssue marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skill_issue_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
blake3 = "=1.5.5"
